2005-03-23  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: bump library soname.

2005-03-23  Mark McLoughlin  <mark@skynet.ie>

	* python/Makefile.am: don't build with $(WARN_CFLAGS)

2005-03-23  Mark McLoughlin  <mark@skynet.ie>

	* libmenu/menu-layout.c: (menu_layout_values_set): fix silly
	crasher.
	
	* libmenu/menu-tree.c:
	(merge_subdir), (merge_subdir_by_name),
	(merge_entry), (merge_entry_by_id), (merge_subdirs),
	(merge_entries), (process_layout_info): adding debugging
	verbosity.
	(merge_subdirs_and_entries): ditto and fix thinko causing
	warnings.

2005-03-15  Mark McLoughlin  <mark@skynet.ie>

	Implement the last bits of the python binding.

	* python/gmenu.pyx:
	Include definition for g_free()
	Implement Directory.make_path ()
	Add MonitorCallback class to encapsulate a python
	callback, user data and menu tree
	Implement Tree.add_monitor() and Tree.remove_montor()

2005-03-15  Mark McLoughlin  <mark@skynet.ie>

	Add python bindings. Mostly complete, but still need
	to finish wraping:
	  - menu_tree_directory_make_path ()
	  - menu_tree_add_monitor ()
	  - menu_tree_remove_monitor ()

	* configure.in, acinclude.m4: add python checks, copied
	from dbus.
	
	* Makefile.am: build the python subdir.
	
	* python/Makefile.am: again copied from dbus.
	
	* python/gmenu.pyx: Pyrex wrapping of the API.

2005-03-15  Mark McLoughlin  <mark@skynet.ie>

	* libmenu/menu-tree.h:
	(menu_tree_entry_get_parent): remove.

2005-03-14  Mark McLoughlin  <mark@skynet.ie>

	Implement support for <Layout> and <DefaultLayout>.
	
	Based on a patch from Frederic Crozat <fcrozat@mandrakesoft.com>
	in bug #164310.

	* libmenu/menu-tree.h: API changes:
	  - Add MenuTreeItem type as base class of other items
	  - Make MenuTreeEntry and MenuTreeDirectory its sub-classes
	  - Add MenuTreeSeparator, MenuTreeAlias and MenuTreeHeader
	  - menu_tree_entry_ref/unref() becomes menu_tree_item_ref/unref()
	  - ditto for menu_tree_directory_ref/unref()